--- a/main.html
+++ b/main.html
@@ -23,8 +23,9 @@
   #blue {
     background-color: blue;
   }
-  table {
-    border: 1px solid black;
+  .middle {
+    /* border: 1px solid black; */
+	  border : 1px solid rgb(0, 0, 0);
     /* border-spacing: 1px; */
   }
 
@@ -41,7 +42,7 @@
   <h1 style="text-align: center;">HTML Assignment #3</h1>
   
   <!-- <h2>Table 1</h2> -->
-  <table id="table-1" style="width: 100%" border="1">
+  <table id="table-1" class="middle" style="width: 100%" border="1">
     <tr>
       <td id="t11">left</td>
       <td id="t12" class="center">center</td>
@@ -62,7 +63,7 @@
 		<br><br>
   
   <!-- <h2>Table 2</h2> -->
-  <table id="table-2" style="width: 100%" border="1">
+  <table  class="middle"  id="table-2" style="width: 100%" border="1">
     <tr>
       <td class="td1" id="t21" colspan="6"></td>
     </tr>
@@ -108,13 +109,13 @@
 
 	<br><br>
 
- <table id="table-3" style="width: 100%;" border="1">
+ <table  class="middle"  id="table-3" style="width: 100%;" border="1">
     <tr id="green">
       <td class="td1" colspan="6"></td>
     </tr>
 	 <tr>
 		 <td style="width:33%"  ></td>
-		  <td style="width:33%"  ><img src ="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+		  <td style="width:33%"  ><img id="t-image" src ="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
 		  <td style="width:33%"  ></td>
 	 </tr>
 	 <tr id="blue">
